fixed the leaderboard some div element error LoL , fixed the view page settled on the center left alignment approach , fixed the cost and fixed some more issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,7 +53,8 @@ h5 {
 }
 
 h6 {
-  font-family: 'Pacifico', cursive
+  font-family: 'Pacifico', cursive;
+  
 }
 
 p {
@@ -230,7 +231,7 @@ input[type=text]:hover {
 .card-2 {
   background-color: var(--sec-white);
   width: 100%;
-  height: 8rem;
+  height: 228em;
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.1);
   border-radius: 16px;
 }
